--- a/index.html
+++ b/index.html
@@ -359,37 +359,38 @@
         </ol>
     </div>
 
-    <div id="fliparea" style="display: none;background-color:#FFFFFF;">
 
-        <header class="main-title">
-            <div class="f40 myName">Marc Gusmano</div>
-            <div class="f18">Senior Microsoft SharePoint and HTML5 Architect</div>
-            <div class="f20 myHeading">Summary:</div>
-            <div class="f20 myBody">
-                Marc Gusmano is a Senior Manager with Hitachi Consulting based in the Houston, TX office
-                with 30 years of experence in the software services industry.
-                He is involved in the development of solutions
-                that utilize technologies such as Visual Studio, SharePoint, ASP.NET and HTML5.
-            </div>
-            <div class="f20 myBody">
-                Mr. Gusmano is extensively involved with custom HTML5 development projects, combining his knowledge of the underlying
-                SharePoint architecture with his experience building HTML5 Single Page Applications, working on the requirements,
-                design and development of custom solutions.
-            </div>
-        </header>
+        <div id="fliparea" style="display: none;background-color:#FFFFFF;">
 
-        <div id="flip" class="container">
-
-
-            <div class="f-page f-cover">
-                <div class="cover-elements">
-                    <h1 class="f20">Swipe or drag to flip pages</h1>
-                    <h1 class="f20">Click to open items<span>Best viewed on iPad</span></h1>
-                    <p><strong>or on desktop withn a Webkit browser (Safari, Chrome)</strong></p>
-                    <div class="f-cover-story f16"><span>Projects Summary</span>Marc Gusmano<div>&nbsp</div></div>
+            <header class="main-title">
+                <div class="f40 myName">Marc Gusmano</div>
+                <div class="f18">Senior Microsoft SharePoint and HTML5 Architect</div>
+                <div class="f20 myHeading">Summary:</div>
+                <div class="f20 myBody">
+                    Marc Gusmano is a Senior Manager with Hitachi Consulting based in the Houston, TX office
+                    with 30 years of experence in the software services industry.
+                    He is involved in the development of solutions
+                    that utilize technologies such as Visual Studio, SharePoint, ASP.NET and HTML5.
                 </div>
-                <div class="f-cover-flip">&lt; Flip The Page</div>
-            </div>
+                <div class="f20 myBody">
+                    Mr. Gusmano is extensively involved with custom HTML5 development projects, combining his knowledge of the underlying
+                    SharePoint architecture with his experience building HTML5 Single Page Applications, working on the requirements,
+                    design and development of custom solutions.
+                </div>
+            </header>
+
+            <div id="flip" class="container">
+
+
+                <div class="f-page f-cover">
+                    <div class="cover-elements">
+                        <h1 class="f20">Swipe or drag to flip pages</h1>
+                        <h1 class="f20">Click to open items<span>Best viewed on iPad</span></h1>
+                        <p><strong>or on desktop withn a Webkit browser (Safari, Chrome)</strong></p>
+                        <div class="f-cover-story f16"><span>Projects Summary</span>Marc Gusmano<div>&nbsp</div></div>
+                    </div>
+                    <div class="f-cover-flip f24">&lt; Flip The Page</div>
+                </div>
 
                 <!--p1-->
                 <div class="f-page">
@@ -412,20 +413,23 @@
                             SQL Server.
                         </div>
                         <div class="f16 myBody">
-                            Technologies: HTML5, Sencha ExtJS 4.2, JQuery 1.9.1, JavaScript, CSS/SASS, Siesta (testing tool),
+                            HTML5, Sencha ExtJS 4.2, JQuery 1.9.1, JavaScript, CSS/SASS, Siesta (testing tool),
                             Microsoft .NET 4.5, C#, Microsoft WCF
                         </div>
                     </div>
                     <div class="box w-90 h-50 box-b-l box-b-r box-img-left">
                         <div class="img-cont" style="background-image: url(resources/images/EMSPEEDPOC.jpg); "></div>
-                        <h3>Large Oil and Gas Provider - Houston, TX<span>Feb 2012 - May 2012</span></h3>
-                        <h3>Senior HTML5 Architect</h3>
-                        HTML5 Proof of Concept.  Web application that provided for visualization of complex workflow
-                        and workstreams for project lifecycle management.  Utilized complex graphics drawing library for data visualizations.
-                        <h3>Technologies Used:</h3>
-                        Sencha Ext JS, HTML5, JQuery 1.9.1, JavaScript, JavaScript InfoVis Toolkit (http://philogb.github.io/jit/),
-                        Microsoft .NET 4.5, C#, Microsoft WCF
-
+                        <div class="f18">Large Oil and Gas Provider - Houston, TX</div>
+                        <div class="f16">Senior HTML5 Architect</div>
+                        <div class="f14">Feb 2012 - May 2012</div>
+                        <div class="f16 myBody">
+                            HTML5 Proof of Concept.  Web application that provided for visualization of complex workflow
+                            and workstreams for project lifecycle management.  Utilized complex graphics drawing library for data visualizations.
+                        </div>
+                        <div class="f16 myBody">
+                            Sencha Ext JS, HTML5, JQuery 1.9.1, JavaScript, JavaScript InfoVis Toolkit (http://philogb.github.io/jit/),
+                            Microsoft .NET 4.5, C#, Microsoft WCF
+                        </div>
                     </div>
                     <div class="box w-10 h-50 box-b-l box-b-r">
                     </div>
@@ -440,15 +444,19 @@
                     </div>
                     <div class="box w-90 h-50 box-b-l box-b-r box-img-left">
                         <div class="img-cont" style="background-image: url(resources/images/EMSPEED10.jpg); "></div>
-                        <h3>Large Oil and Gas Provider - Houston, TX<span>Nov 2011 - Jan 2012</span></h3>
-                        <h3>Senior Web Architect</h3>
-                        Architected and implemented a Web-based portal to a project management system.  The User Interface
-                        is based on a mix of ASP.NET and Microsoft Silverlight.  All
-                        interaction with the server is via AJAX calls to Microsoft Windows Communication Framework (WCF) services and
-                        SQL Server.
-                        <h3>Technologies Used:</h3>
-                        ASP.NET, Silverlight, JQuery, JavaScript,
-                        Microsoft .NET 4.5, C#, Microsoft WCF
+                        <div class="f18">Large Oil and Gas Provider - Houston, TX</div>
+                        <div class="f16">Senior Web Architect</div>
+                        <div class="f14">Nov 2011 - Jan 2012</div>
+                        <div class="f16 myBody">
+                            Architected and implemented a Web-based portal to a project management system.  The User Interface
+                            is based on a mix of ASP.NET and Microsoft Silverlight.  All
+                            interaction with the server is via AJAX calls to Microsoft Windows Communication Framework (WCF) services and
+                            SQL Server.
+                        </div>
+                        <div class="f16 myBody">
+                            ASP.NET, Silverlight, JQuery, JavaScript,
+                            Microsoft .NET 4.5, C#, Microsoft WCF
+                        </div>
                     </div>
                     <div class="box w-10 h-50 box-b-l box-b-r">
                     </div>
@@ -456,19 +464,111 @@
                     </div>
                     <div class="box w-90 h-50 box-b-l box-b-r box-img-right">
                         <div class="img-cont" style="background-image: url(resources/images/NalcoEquip.jpg); "></div>
-                        <h3>Energy Technologies Company - Houston, TX<span>Sept 2010 - Oct 2011</span></h3>
-                        <h3>Senior Web Architect</h3>
-                        Designed and developed a client-facing SharePoint 2010 Refined Knowledge application,
-                        which allows for the monitoring of key refinery equipment at a client site and provides for real-time
-                        reporting and monitoring through custom-built SharePoint sites.  The application heavily utilizes
-                        Silverlight 4 for the user experience, and a back-end Pi database infrastructure from OSISoft.
-                        <h3>Technologies Used:</h3>
-                        ASP.NET, Silverlight, JQuery, JavaScript, SharePoint 2010,
-                        Microsoft .NET 4.5, C#, Microsoft WCF
+                        <div class="f18">Energy Technologies Company - Houston, TX</div>
+                        <div class="f16">Senior Web Architect</div>
+                        <div class="f14">Sept 2010 - Oct 2011</div>
+                        <div class="f16 myBody">
+                            Designed and developed a client-facing SharePoint 2010 Refined Knowledge application,
+                            which allows for the monitoring of key refinery equipment at a client site and provides for real-time
+                            reporting and monitoring through custom-built SharePoint sites.  The application heavily utilizes
+                            Silverlight 4 for the user experience, and a back-end Pi database infrastructure from OSISoft.
+                        </div>
+                        <div class="f16 myBody">
+                            ASP.NET, Silverlight, JQuery, JavaScript, SharePoint 2010,
+                            Microsoft .NET 4.5, C#, Microsoft WCF
+                        </div>
                     </div>
                 </div>
 
+
                 <!--p3-->
+                <div class="f-page">
+                    <div class="f-title">
+                        <a class="f14">Marc Gusmano</a>
+                        <h2 class="f24">Projects at Hitachi Consulting</h2>
+                        <a class="f14">Projects Summary</a>
+                    </div>
+                    <div class="box w-10 h-50 box-b-l box-b-r">
+                    </div>
+                    <div class="box w-90 h-50 box-b-l box-b-r box-img-right">
+                        <div class="img-cont" style="background-image: url(resources/images/Scheduler.jpg); "></div>
+                        <div class="f18">Defense Contractor - Norfolk, VA</div>
+                        <div class="f16">Senior Web Architect</div>
+                        <div class="f14">May 2010 - Aug 2010</div>
+                        <div class="f16 myBody">
+                            Architected, designed and developed a SharePoint 2010 event management system
+                            which utilized a Silverlight 4 calendaring interface that was built with the Telerik Silverlight controls
+                            and the SharePoint Client Object model.
+                            The application also takes advantage of the new SharePoint Relational list technology,
+                            and utilizes a Visual Studio - based Workflow to manage the life cycle of events.
+                        </div>
+                        <div class="f16 myBody">
+                            ASP.NET, Silverlight, JQuery, JavaScript, SharePoint 2010,
+                            Microsoft .NET 4.5, C#, Microsoft WCF
+                        </div>
+                    </div>
+                    <div class="box w-90 h-50 box-b-l box-b-r box-img-left">
+                        <div class="img-cont" style="background-image: url(resources/images/Atlas.jpg); "></div>
+                        <div class="f18">Major Pharmaceutical Company - San Francisco, CA</div>
+                        <div class="f16">Senior Web Architect</div>
+                        <div class="f14">Jan 2010 - April 2010</div>
+                        <div class="f16 myBody">
+                            Lead Architect for a custom SharePoint Search Web application against an OpenText/LiveLink document repository.
+                            Defined and implemented the SharePoint search interface to OpenText/LiveLink, and designed and developed
+                            the custom search experience utilizing the Infragistics Silverlight grid control which provided for advanced sorting,
+                            grouping and column manipulation.
+                        </div>
+                        <div class="f16 myBody">
+                            ASP.NET, Silverlight, JQuery, JavaScript, SharePoint 2007, Visual Studio 2008, Infragistics controls ,
+                            Microsoft .NET 4.5, C#, Microsoft WCF
+                        </div>
+                    </div>
+                    <div class="box w-10 h-50 box-b-l box-b-r">
+                    </div>
+                </div>
+
+                <!--p4-->
+                <div class="f-page">
+                    <div class="f-title">
+                        <a>Marc Gusmano</a>
+                        <h2>Projects at Hitachi Consulting</h2>
+                        <a>Previous Projects</a>
+                    </div>
+                    <div class="box w-90 h-50 box-b-l box-b-r box-img-left">
+                        <div class="img-cont" style="background-image: url(resources/images/EMSIX.png); "></div>
+                        <div class="f18">Large Oil and Gas Provider - Houston, TX</div>
+                        <div class="f16">Senior SharePoint Architect</div>
+                        <div class="f14">Oct 2009 - Dec 2009</div>
+                        <div class="f16 myBody">
+                            Architected and implemented a Document Management System utilizing SharePoint Enterprise Search.
+                            The application utilized the SharePoint Profile System to provide for personalized search results.
+                            The display of search results utilized a custom faceted search experience, with result data displayed
+                            in tabular format to allow for sorting.  An AJAX-enabled interface added to the custom search experience.
+                            The custom Search experience was created with custom Visual Studio controls.
+                        </div>
+                        <div class="f16 myBody">
+                            Microsoft.Net (C#) 3.5, SQL Server2008 SharePoint 2007, Visual Studio 2008, ASP.NET AJAX
+                        </div>
+                    </div>
+                    <div class="box w-10 h-50 box-b-l box-b-r">
+                    </div>
+                    <div class="box w-10 h-50 box-b-l box-b-r">
+                    </div>
+                    <div class="box w-90 h-50 box-b-l box-b-r box-img-right">
+                        <div class="img-cont" style="background-image: url(resources/images/); "></div>
+                        <div class="f18"></div>
+                        <div class="f16"></div>
+                        <div class="f14"></div>
+                        <div class="f16 myBody">
+
+                        </div>
+                        <div class="f16 myBody">
+
+                        </div>
+                    </div>
+                </div>
+
+                <!--p5-->
                 <div class="f-page">
                     <div class="f-title">
                         <a>Marc Gusmano</a>
@@ -522,7 +622,8 @@
             </div>
 
         </div>
-    </div>
+
+
 
     <div id="currentarea">
         <div style="display: none;" id="summary">
