--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                 <div class="f-page">
                     <div class="f-title">
                         <a class="f14">Marc Gusmano</a>
-                        <h2 class="f24">Projects at Hitachi Consulting</h2>
+                        <h2>Projects at Hitachi Consulting</h2>
                         <a class="f14">Projects Summary</a>
                     </div>
                     <div class="box w-10 h-50 box-b-l box-b-r">
@@ -485,7 +485,7 @@
                 <div class="f-page">
                     <div class="f-title">
                         <a class="f14">Marc Gusmano</a>
-                        <h2 class="f24">Projects at Hitachi Consulting</h2>
+                        <h2>Projects at Hitachi Consulting</h2>
                         <a class="f14">Projects Summary</a>
                     </div>
                     <div class="box w-10 h-50 box-b-l box-b-r">
