--- a/index.html
+++ b/index.html
@@ -773,31 +773,31 @@
     </div>
 
     <div style="display: none;" id="hitachi" class="pastcompany">
-        <div class="f14">
+        <div class="f14 myBody">
             Senior Manager with Hitachi Consulting based in the Houston office. Involved in assisting and mentoring clients in the development and implementation of solutions that utilize Microsoft SharePoint related technologies including ASP.NET and HTML5.
         </div>
     </div>
 
     <div style="display: none;" id="img" class="pastcompany">
-        <div class="f14">
+        <div class="f14 myBody">
             Partner and the Director of Emerging Technologies for The Information Management Group, a Microsoft Gold Certified Partner and the Worldwide 2001 Microsoft Certified Technical Education Center (CTEC) of the year. In this role, Mr. Gusmano was responsible for fostering an understanding of new and emerging technologies can be utilized for IMG and its clients.  In this position, Marc was  involved in Architecting applications for IMG’s Consulting Services clients, as well as mentoring and training in client engagements.
         </div>
     </div>
 
     <div style="display: none;" id="bismarck" class="pastcompany">
-        <div class="f14">
+        <div class="f14 myBody">
             The Bismarck Group was a Client Server software product integration Firm headquartered in Chicago, Illinois.  The Firm’s tag, 'Business Integration Services using Client Server Technologies', highlighted the firm’s focus: Providing Client Server software integration services to high growth, information-centric organizations and building solutions that can be sold as 'Customizable Software Products'.
         </div>
     </div>
 
     <div style="display: none;" id="lante" class="pastcompany">
-        <div class="f14">
+        <div class="f14 myBody">
             Mr. Gusmano started at Lante as Senior Consulting Manager and immediately began to get involved in many of the key clients for Lante, including Dell Computer, Abbott Labs, Baxter Healthcare, Sears, and Ameritech.  In  April of 1993 Marc was promoted to the position of Director of Consulting, responsible for the entire consulting organization at Lante, including all aspects of project execution, profit and loss (utilization) responsibility,  performance reviews,  recruiting,  and staffing.
         </div>
     </div>
 
     <div style="display: none;" id="andersen" class="pastcompany">
-        <div class="f14">
+        <div class="f14 myBody">
             Mr. Gusmano began his consulting career as a staff consultant in the Chicago office of Arthur Andersen and Co./Andersen Consulting in May of 1984.  He spent his first 4 years on a variety of medium and large systems development projects for organizations such as IBM, Northern Trust Bank, Mellon Bank in Pittsburgh, and Lutheran General Hospital.  Mr. Gusmano was promoted to a Project Manager after just four years with Andersen Consulting, and moved to the Technology Services area where he became a project Manager for the New Age Systems group, a very specialized group within Andersen Consulting, focusing on assisting local Andersen offices with the planning, management, and deployment of client-server business applications.
         </div>
     </div>
