--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         }
     }
 
-})(this);Ext.blink({"id":"43c07621-ff6e-4ac5-8bd9-7dd45720baa5","js":[{"path":"app.js"},{"path":"js/modernizr.custom.08464.js"},{"path":"app.js"}],"css":[{"path":"resources/css/app.css","update":"delta"},{"path":"cover.css","update":"delta"},{"path":"css/style.css","update":"delta"},{"path":"css/demo.css","update":"delta"},{"path":"css/jquery.mobile.flip.css","update":"delta"}]});</script>
+})(this);Ext.blink({"id":"43c07621-ff6e-4ac5-8bd9-7dd45720baa5","js":[{"path":"app.js"},{"path":"js/modernizr.custom.08464.js"},{"path":"app.js"}],"css":[{"path":"resources/css/app.css","update":"delta"},{"path":"css/cover.css","update":"delta"},{"path":"css/style.css","update":"delta"},{"path":"css/demo.css","update":"delta"}]});</script>
 
 </head>
 <body>
@@ -240,6 +240,10 @@
 
     <!--mjg styles-->
     <style>
+        .x-layout-card-item {
+            background: white;
+        }
+
         .myName {
             display: table-cell;
             text-align: left;
@@ -359,11 +363,14 @@
         </ol>
     </div>
 
+    <!--
+    <div id="fliparea2" style="display: none;">
 
-    <div id="fliparea" style="display: none;background-color:#FFFFFF;">
 
         <header class="main-title">
-            <div class="f40 myName">Marc Gusmano</div>
+            <div class=" f40 myname">
+                Marc Gusmano
+            </div>
             <div class="f18">Senior Microsoft SharePoint and HTML5 Architect</div>
             <div class="f20 myHeading">Summary:</div>
             <div class="f20 myBody">
@@ -379,7 +386,34 @@
             </div>
         </header>
 
-        <div id="flip" class="container">
+
+        <div id="flip2" class="container" style=";background-color:#FFFFFF"></div>
+
+    </div>
+-->
+
+    <div id="fliparea" style="display: none;">
+
+        <header class="main-title" >
+            <div class=" f40 myname">
+                Marc Gusmano
+            </div>
+            <div class="f18">Senior Microsoft SharePoint and HTML5 Architect</div>
+            <div class="f20 myHeading">Summary:</div>
+            <div class="f20 myBody">
+                Marc Gusmano is a Senior Manager with Hitachi Consulting based in the Houston, TX office
+                with 30 years of experence in the software services industry.
+                He is involved in the development of solutions
+                that utilize technologies such as Visual Studio, SharePoint, ASP.NET and HTML5.
+            </div>
+            <div class="f20 myBody">
+                Mr. Gusmano is extensively involved with custom HTML5 development projects, combining his knowledge of the underlying
+                SharePoint architecture with his experience building HTML5 Single Page Applications, working on the requirements,
+                design and development of custom solutions.
+            </div>
+        </header>
+
+        <div id="flip" class="container" >
 
 
             <div class="f-page f-cover">
