--- a/index.html
+++ b/index.html
@@ -269,6 +269,10 @@
             margin: 5px 0px 0px 0px;
         }
 
+        .f8 {
+            font-size: 8px;
+            font-family: Arial;
+        }
         .f10 {
             font-size: 10px;
             font-family: Arial;
