--- a/index.html
+++ b/index.html
@@ -273,6 +273,11 @@
             font-size: 8px;
             font-family: Arial;
         }
+
+        .f9 {
+            font-size: 8px;
+            font-family: Arial;
+        }
         .f10 {
             font-size: 10px;
             font-family: Arial;
