--- a/index.html
+++ b/index.html
@@ -244,6 +244,10 @@
             background: white;
         }
 
+        .x-button-label {
+            font-family: Arial;
+        }
+
         .myName {
             display: table-cell;
             text-align: left;
