--- a/index.html
+++ b/index.html
@@ -377,8 +377,35 @@
     </div>
 
     <!--
-    <div id="fliparea2" style="display: none;">
+        <div id="fliparea2" style="display: none;">
 
+
+            <header class="main-title">
+                <div class=" f40 myname">
+                    Marc Gusmano
+                </div>
+                <div class="f18">Senior Microsoft SharePoint and HTML5 Architect</div>
+                <div class="f20 myHeading">Summary:</div>
+                <div class="f20 myBody">
+                    Marc Gusmano is a Senior Manager with Hitachi Consulting based in the Houston, TX office
+                    with 30 years of experence in the software services industry.
+                    He is involved in the development of solutions
+                    that utilize technologies such as Visual Studio, SharePoint, ASP.NET and HTML5.
+                </div>
+                <div class="f20 myBody">
+                    Mr. Gusmano is extensively involved with custom HTML5 development projects, combining his knowledge of the underlying
+                    SharePoint architecture with his experience building HTML5 Single Page Applications, working on the requirements,
+                    design and development of custom solutions.
+                </div>
+            </header>
+
+
+            <div id="flip2" class="container" style=";background-color:#FFFFFF"></div>
+
+        </div>
+    -->
+
+    <div id="fliparea" style="display: none;">
 
         <header class="main-title">
             <div class=" f40 myname">
@@ -399,40 +426,13 @@
             </div>
         </header>
 
-
-        <div id="flip2" class="container" style=";background-color:#FFFFFF"></div>
-
-    </div>
--->
-
-    <div id="fliparea" style="display: none;">
-
-        <header class="main-title" >
-            <div class=" f40 myname">
-                Marc Gusmano
-            </div>
-            <div class="f18">Senior Microsoft SharePoint and HTML5 Architect</div>
-            <div class="f20 myHeading">Summary:</div>
-            <div class="f20 myBody">
-                Marc Gusmano is a Senior Manager with Hitachi Consulting based in the Houston, TX office
-                with 30 years of experence in the software services industry.
-                He is involved in the development of solutions
-                that utilize technologies such as Visual Studio, SharePoint, ASP.NET and HTML5.
-            </div>
-            <div class="f20 myBody">
-                Mr. Gusmano is extensively involved with custom HTML5 development projects, combining his knowledge of the underlying
-                SharePoint architecture with his experience building HTML5 Single Page Applications, working on the requirements,
-                design and development of custom solutions.
-            </div>
-        </header>
-
-        <div id="flip" class="container" >
+        <div id="flip" class="container">
 
 
             <div class="f-page f-cover">
                 <div class="cover-elements">
-                    <h1 class="f20">Swipe or drag to flip pages</h1>
-                    <h1 class="f20">Click to open items<span>Best viewed on iPad</span></h1>
+                    <h1 class="f18">Swipe or drag to flip pages</h1>
+                    <h1 class="f18">Click to open items<span>Best viewed on iPad</span></h1>
                     <p><strong>or on desktop withn a Webkit browser (Safari, Chrome)</strong></p>
                     <div class="f-cover-story f16"><span>Projects Summary</span>Marc Gusmano<div>&nbsp</div></div>
                 </div>
@@ -440,6 +440,46 @@
             </div>
 
             <!--p1-->
+            <div class="f-page">
+                <div class="f-title">
+                    <a>Marc Gusmano</a>
+                    <h2>Projects at Hitachi Consulting</h2>
+                    <a>Previous Projects</a>
+                </div>
+                <div class="box w-90 h-50 box-b-l box-b-r box-img-left">
+                    <div class="img-cont" style="background-image: url(resources/images/mobile.png); "></div>
+                    <div class="f18">Large Oil and Gas Provider - Houston, TX</div>
+                    <div class="f16">Senior HTML5 Architect</div>
+                    <div class="f14">April 2013 - present</div>
+                    <div class="f16 myBody">
+                        Architected and implemented a project management mobile web application.
+                    </div>
+                    <div class="f16 myBody">
+                        HTML5, Sencha Touch 2.3, JQuery 1.9.1, JavaScript, CSS/SASS, Siesta (testing tool),
+                        Microsoft .NET 4.5, C#, Microsoft WCF
+                    </div>
+                </div>
+                <div class="box w-10 h-50 box-b-l box-b-r">
+                </div>
+                <div class="box w-10 h-50 box-b-l box-b-r">
+                </div>
+                <div class="box w-90 h-50 box-b-l box-b-r box-img-right">
+                    <div class="img-cont" style="background-image: url(resources/images/me.png); "></div>
+                    <div class="f18">Online Mobile Resume</div>
+                    <div class="f16">Senior HTML5 Architect</div>
+                    <div class="f14">November 2013</div>
+                    <div class="f16 myBody">
+                        Resume implemented as a mobile web application.  Includes several innovative ways to page through data.
+                    </div>
+                    <div class="f16 myBody">
+                        HTML5, Sencha Touch 2.3, JQuery 1.9.1, JavaScript, CSS/SASS
+                    </div>
+                </div>
+            </div>
+
+
+
+            <!--p2-->
             <div class="f-page">
                 <div class="f-title">
                     <a class="f14">Marc Gusmano</a>
@@ -482,7 +522,7 @@
                 </div>
             </div>
 
-            <!--p2-->
+            <!--p3-->
             <div class="f-page">
                 <div class="f-title">
                     <a>Marc Gusmano</a>
@@ -528,7 +568,7 @@
             </div>
 
 
-            <!--p3-->
+            <!--p4-->
             <div class="f-page">
                 <div class="f-title">
                     <a class="f14">Marc Gusmano</a>
@@ -574,7 +614,7 @@
                 </div>
             </div>
 
-            <!--p4-->
+            <!--p5-->
             <div class="f-page">
                 <div class="f-title">
                     <a>Marc Gusmano</a>
@@ -615,7 +655,7 @@
                 </div>
             </div>
 
-            <!--p5-->
+            <!--p6-->
             <div class="f-page">
                 <div class="f-title">
                     <a>Marc Gusmano</a>
@@ -691,7 +731,32 @@
             <div class="f16 myHeading" style="padding:0px 0px 0px 30px"><< swipe</div>
         </div>
 
+        <div style="display: none;" class="pastwork" id="mobile">
+            <div class="f16 myName">Large Oil and Gas Provider</div>
+            <div class="f14">Houston, TX</div>
+            <div class="f14">Senior HTML5 Architect</div>
+            <div class="f12">April 2013 - present</div>
+            <div class="f14 myBody">
+                Architected and implemented a project management mobile web application.
+            </div>
+            <div class="f14 myBody">
+                HTML5, Sencha Touch 2.3, JQuery 1.9.1, JavaScript, CSS/SASS, Siesta (testing tool),
+                Microsoft .NET 4.5, C#, Microsoft WCF
+            </div>
+        </div>
 
+        <div style="display: none;" class="pastwork" id="me">
+            <div class="f16 myName">Online Mobile Resume</div>
+            <div class="f14">Houston, TX</div>
+            <div class="f14">Senior HTML5 Architect</div>
+            <div class="f12">November 2013</div>
+            <div class="f14 myBody">
+                Resume implemented as a mobile web application.  Includes several innovative ways to page through data.
+            </div>
+            <div class="f14 myBody">
+                HTML5, Sencha Touch 2.3, JQuery 1.9.1, JavaScript, CSS/SASS
+            </div>
+        </div>
 
         <div style="display: none;" class="pastwork" id="EMSPEED12">
             <div class="f16 myName">Large Oil and Gas Provider</div>
@@ -816,8 +881,10 @@
         </div>
     </div>
 
-    <div id="companyarea">
-    </div>
+    <!--
+        <div id="companyarea">
+        </div>
+    -->
 
     <div style="display: none;" id="hitachi" class="pastcompany">
         <div class="f14 myBody">
