--- a/index.html
+++ b/index.html
@@ -775,6 +775,24 @@
             </div>
         </div>
 
+        <div style="display: none;" class="pastwork" id="EMSPEED12a">
+            <div class="f16 myName">Large Oil and Gas Provider</div>
+            <div class="f14">Houston, TX</div>
+            <div class="f14">Senior SharePoint Architect</div>
+            <div class="f12">June 2012 - present</div>
+            <div class="f14 myBody">
+                Architected and implemented a Web-based portal to a project management system.  The User Interface
+                is 100% browser based, utilizing HTML5, JavaScript and CSS and is built as a 'Single Page Application'.   All
+                interaction with the server is via AJAX calls to Microsoft Windows Communication Framework (WCF) services and
+                SQL Server.
+            </div>
+            <div class="f14 myBody">
+                HTML5, Sencha ExtJS 4.2, JQuery 1.9.1, JavaScript, CSS/SASS, Siesta (testing tool),
+                Microsoft .NET 4.5, C#, Microsoft WCF
+            </div>
+        </div>
+
+
         <div style="display: none;" class="pastwork" id="EMSPEEDPOC">
 
             <div class="f16 myName">Large Oil and Gas Provider</div>
