--- a/index.html
+++ b/index.html
@@ -376,35 +376,6 @@
         </ol>
     </div>
 
-    <!--
-        <div id="fliparea2" style="display: none;">
-
-
-            <header class="main-title">
-                <div class=" f40 myname">
-                    Marc Gusmano
-                </div>
-                <div class="f18">Senior Microsoft SharePoint and HTML5 Architect</div>
-                <div class="f20 myHeading">Summary:</div>
-                <div class="f20 myBody">
-                    Marc Gusmano is a Senior Manager with Hitachi Consulting based in the Houston, TX office
-                    with 30 years of experence in the software services industry.
-                    He is involved in the development of solutions
-                    that utilize technologies such as Visual Studio, SharePoint, ASP.NET and HTML5.
-                </div>
-                <div class="f20 myBody">
-                    Mr. Gusmano is extensively involved with custom HTML5 development projects, combining his knowledge of the underlying
-                    SharePoint architecture with his experience building HTML5 Single Page Applications, working on the requirements,
-                    design and development of custom solutions.
-                </div>
-            </header>
-
-
-            <div id="flip2" class="container" style=";background-color:#FFFFFF"></div>
-
-        </div>
-    -->
-
     <div id="fliparea" style="display: none;">
 
         <header class="main-title">
@@ -412,19 +383,35 @@
                 Marc Gusmano
             </div>
             <div class="f18">Senior Microsoft SharePoint and HTML5 Architect</div>
-            <div class="f20 myHeading">Summary:</div>
-            <div class="f20 myBody">
+            <div class="f18 myHeading">Summary:</div>
+            <div class="f16 myBody">
                 Marc Gusmano is a Senior Manager with Hitachi Consulting based in the Houston, TX office
                 with 30 years of experence in the software services industry.
                 He is involved in the development of solutions
                 that utilize technologies such as Visual Studio, SharePoint, ASP.NET and HTML5.
             </div>
-            <div class="f20 myBody">
+            <div class="f16 myBody">
                 Mr. Gusmano is extensively involved with custom HTML5 development projects, combining his knowledge of the underlying
                 SharePoint architecture with his experience building HTML5 Single Page Applications, working on the requirements,
                 design and development of custom solutions.
             </div>
-        </header>
+
+            <div class="f18 myHeading">Who am I?</div>
+            <div class="f14" style="margin:5px 0px 0px 0px;">I have a passion for building outstanding software, especially leading edge, user-centric applications.</div>
+            <div class="f14">I have been building Graphical/Windows applications for over 15 years (C++, Visual Basic, .NET/C#)</div>
+            <div class="f14">I have been developing brower-based web applications for the past 10 years, ASP.NET, Silverlight, HTML5/JavaScript/CSS</div>
+            <div class="f14">I have been very Microsoft-centric in my career; i am very well versed on the Microsoft developer stack</div>
+            <div class="f14">I want to work for an innovative, driven company who understands the work/life balance - working hard and enjoying life.</div>
+            <div class="f14">I am ready to take on the next phase of my career as a senior developer, mentor and key resource to help build a small business.</div>
+            <div class="f14">I want to share my knowledge as a trainer and mentor.</div>
+            <div class="f14">I love to delight my clients, and have a track record of doing exactly that.</div>
+            <div class="f14">I am a huge beliver of continuous integration as part of the software development process.</div>
+            <div class="f14">I enjoy public speaking, and have spoken at many industry developer conferences (Microsoft Tech-Ed, Advisor DevCon)</div>
+            <div class="f14">I was the President and key speaker for Microsoft Interactive Developer Group in Chicago</div>
+
+
+
+</header>
 
         <div id="flip" class="container">
 
@@ -434,10 +421,53 @@
                     <h1 class="f18">Swipe or drag to flip pages</h1>
                     <h1 class="f18">Click to open items<span>Best viewed on iPad</span></h1>
                     <p><strong>or on desktop withn a Webkit browser (Safari, Chrome)</strong></p>
+
+                    <div class="f12" style="color:#ffffff;">I have a passion for building outstanding software, especially leading edge, user-centric applications.</div>
+                    <div class="f12" style="color:#ffffff;">I have been building Graphical/Windows applications for over 15 years (C++, Visual Basic, .NET/C#)</div>
+
+
+
                     <div class="f-cover-story f16"><span>Projects Summary</span>Marc Gusmano<div>&nbsp</div></div>
                 </div>
                 <div class="f-cover-flip f24">&lt; Flip The Page</div>
             </div>
+
+
+            <!--p1-->
+            <div class="f-page">
+                <div class="f-title">
+                    <a>Marc Gusmano</a>
+                    <h2>Here are a few things I feel describe me...</h2>
+                    <a></a>
+                </div>
+                <div class="box w-100 h-100 box-b-l box-b-r">
+
+                    <div class="f18">
+                        <ol>
+                            <li>I have a passion for building outstanding software, especially leading edge, user-centric applications.</li>
+                            <li>I have been building Graphical/Windows applications for over 15 years (C++, Visual Basic, .NET/C#)</li>
+                            <li>I have been developing brower-based web applications for the past 10 years, ASP.NET, Silverlight, HTML5/JavaScript/CSS</li>
+                            <li>I have been very Microsoft-centric in my career; i am very well versed on the Microsoft developer stack</li>
+                            <li>I want to work for an innovative, driven company who understands the work/life balance - working hard and enjoying life.</li>
+                            <li>I am ready to take on the next phase of my career as a senior developer, mentor and key resource to help build a small business.</li>
+                            <li>I want to share my knowledge as a trainer and mentor.</li>
+                            <li>I love to delight my clients, and have a track record of doing exactly that.</li>
+                            <li>I am a huge beliver of continuous integration as part of the software development process.</li>
+                            <li>
+                                I enjoy public speaking, and have spoken at many industry developer conferences
+                                <ol>
+                                    <li>numerous presentations for Microsoft Tech-Ed, both in the United States and Europe.</li>
+                                    <li>Advisor DevCon (a developer conference)</li>
+                                </ol>
+                            </li>
+                            <li>President and key speaker for Microsoft Interactive Developer Group in Chicago</li>
+                        </ol>
+                    </div>
+
+                </div>
+
+            </div>
+
 
             <!--p1-->
             <div class="f-page">
