--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
         <header class="main-title">
             <div class=" f40 myname">
-                Marcus Gusmano
+                Marc Gusmano
             </div>
             <div class="f18">Senior Microsoft SharePoint and HTML5 Architect</div>
             <div class="f18 myHeading">Summary:</div>
@@ -395,6 +395,9 @@
                 SharePoint architecture with his experience building HTML5 Single Page Applications, working on the requirements,
                 design and development of custom solutions.
             </div>
+
+            <div class="f16 myBody" id="theBrowser">hi</div>
+
             <!--
             <div class="f18 myHeading">Who am I?</div>
             <div class="f14" style="margin:5px 0px 0px 0px;">I have a passion for building outstanding software, especially leading edge, user-centric applications.</div>
