--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                 design and development of custom solutions.
             </div>
 
-            <div class="f16 myBody" id="theBrowser">hi</div>
+            <div class="f24 myBody" style="color:red;margin:20px 0px 0px 0px;" id="theBrowser"></div>
 
             <!--
             <div class="f18 myHeading">Who am I?</div>
